--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Yanis-lebzar.github.io/netflix__clone",
+  "homepage": "https://yanis-lebzar.github.io/netflix-clone/",
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
